fix css load and plans overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -342,7 +342,7 @@ a {
 
 /* Plans */
 .block-plans {
-  overflow-x: hidden;
+  overflow: hidden;
   max-width: 100vw;
 }
 
